--- a/bb/package.json
+++ b/bb/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "ts-react-google-login-component": "^1.1.9",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
